--- a/src/common/AnimText/style.module.scss
+++ b/src/common/AnimText/style.module.scss
@@ -20,7 +20,7 @@
   line-height: 1;
   .revealWord {
     margin-right: 12px;
-    position: relative;
+    // position: relative;
     .revealChr {
       background: linear-gradient(
         to right,
